--- a/src/App.css
+++ b/src/App.css
@@ -1,143 +1,140 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .hero-bg-img {
-    background-image: url("./assets/hero.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 500px;
+  background-image: url("./assets/banner.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
 }
 
 .bg-men-running {
-    background-image: url("./assets/men-playing.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 300px;
+  background-image: url("./assets/8.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  height: 500px;
 }
 
 .bg-women-running {
-    background-image: url("./assets/women-playing.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 300px;
+  background-image: url("./assets/7.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 600px;
 }
 
 .newly-available {
-    position: relative; /* Make the position relative for the overlay */
-    background-image: url("./assets/bg-newly-available.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* height: 600px; */
-    display: flex;
-    align-items: center;
+  position: relative; /* Make the position relative for the overlay */
+  background-image: url("./assets/bg-newly-available.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* height: 600px; */
+  display: flex;
+  align-items: center;
 }
 
 .newly-available::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Adjust the opacity for darkness */
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Adjust the opacity for darkness */
 }
 
-
 .card {
-    /* width: 400px; */
-    @apply lg:w-[400px] w-full;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    transition: 0.2s ease-in-out;
-    cursor: pointer;
-  }
-  
-  .img {
-    height: 100%;
-    position: absolute;
-    transition: 0.2s ease-in-out;
-    z-index: 1;
-  }
-  
-  .textBox {
-    position: absolute;
-    opacity: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    transition: 0.2s ease-in-out;
-    z-index: 2;
-  }
-  
-  .textBox > .text {
-    font-weight: bold;
-  }
-  
-  .textBox > .head {
-    font-size: 20px;
-  }
-  
-  .textBox > .price {
-    font-size: 17px;
-  }
-  
-  .textBox > span {
-    font-size: 12px;
-    color: lightgrey;
-  }
-  
-  .card:hover > .textBox {
-    opacity: 1;
-  }
-  
-  .card img:hover {
-    height: 100%;
-    filter: blur(10px);
-    animation: anim 3s infinite;
-  }
-  
-  @keyframes anim {
-    0% {
-      transform: translateY(0);
-    }
-  
-    50% {
-      transform: translateY(-20px);
-    }
-  
-    100% {
-      transform: translateY(0);
-    }
-  }
-  
-  .card:hover {
-    transform: scale(1.04) rotate(-1deg);
-  }
-  
-  
+  /* width: 400px; */
+  @apply lg:w-[400px] w-full;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+}
 
-  .cart-container::-webkit-scrollbar {
-    width: 0.5em;
+.img {
+  height: 100%;
+  position: absolute;
+  transition: 0.2s ease-in-out;
+  z-index: 1;
+}
+
+.textBox {
+  position: absolute;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  transition: 0.2s ease-in-out;
+  z-index: 2;
+}
+
+.textBox > .text {
+  font-weight: bold;
+}
+
+.textBox > .head {
+  font-size: 20px;
+}
+
+.textBox > .price {
+  font-size: 17px;
+}
+
+.textBox > span {
+  font-size: 12px;
+  color: lightgrey;
+}
+
+.card:hover > .textBox {
+  opacity: 1;
+}
+
+.card img:hover {
+  height: 100%;
+  filter: blur(10px);
+  animation: anim 3s infinite;
+}
+
+@keyframes anim {
+  0% {
+    transform: translateY(0);
   }
-   
-  .cart-container::-webkit-scrollbar-track {
-    background-color: darkgrey;
+
+  50% {
+    transform: translateY(-20px);
   }
-  
-  .cart-container::-webkit-scrollbar-thumb {
-    background-color: black;
-    border-radius: 100vw;
+
+  100% {
+    transform: translateY(0);
   }
+}
+
+.card:hover {
+  transform: scale(1.04) rotate(-1deg);
+}
+
+.cart-container::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+.cart-container::-webkit-scrollbar-track {
+  background-color: darkgrey;
+}
+
+.cart-container::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 100vw;
+}
