--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,107 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
+  margin: 0px;
+  padding: 0px;
   font-family: "Poppins", sans-serif;
 }
-
+.collapse {
+  visibility: visible !important;
+}
+.nav-tabs{
+  border: 0px !important;
+}
 .hero-bg-img {
   background-image: url("./assets/banner.jpg");
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 500px;
 }
-
+.contact-banner{
+  background: url("./assets/contact.png"),rgba(0, 0, 0, 0.7);
+  background-blend-mode: multiply;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+}
 .bg-men-running {
   background-image: url("./assets/8.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-
   height: 500px;
 }
-
+.profile-banner{
+  background: url("./assets/profilebg.png"),rgba(0, 0, 0, 0.7);
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  background-position: center;
+  background-size: cover;
+  height: 300px;
+}
+.faq-banner{
+  background: url("./assets/image17.png"),rgba(0, 0, 0, 0.4);
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  background-position: center;
+  background-size: cover;
+  height: 300px;
+}
+.about-banner{
+  background: url("./assets/image7.png"),rgba(0, 0, 0, 0.4);
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  background-position: center;
+  background-size: cover;
+  height: 500px;
+}
 .bg-women-running {
   background-image: url("./assets/7.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
   height: 600px;
+}
+.orange{
+  background-color: #f5743b;
+  color: #f4f2f2;
+  
+  border-radius: 20px;
+  border: 0px;
+  font-size: 15px;
+ padding: 14px 20px;
+}
+.black{
+  background-color: #000000;
+  border-radius: 20px;
+  border: 0px;
+  font-size: 15px;
+ padding: 14px 20px;
+}
+.tabs-btn{
+  background-color: green !important;
+  color: #fff !important;
+  border-radius: 20px !important;
+  padding: 10px 20px !important;
+  margin: 0px 20px 10px 20px !important;
+}
+
+.tabs-btn2{
+  background-color:#225cb4!important;
+  color: #fff !important;
+  border-radius: 20px !important;
+  padding: 5px 10px !important;
+  margin-bottom: 10px !important;
+
+}
+.wraps{
+  display: flex;
+  margin: auto;
+  gap:40px;
+  width: 90%;
+  margin-bottom: 10px;
 }
 
 .newly-available {
@@ -148,3 +222,219 @@
   display: block;
 }
 
+.size{
+  font-size: 100px;
+  color: #fff;
+  padding-top: 80px;
+  text-transform: uppercase;
+}
+
+/* tab-content */
+.past-order-box{
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;;
+   width: 100%;
+   height:auto ;
+   padding: 40px 40px;
+ }
+ .login-box{
+  border: 1px solid #d4d4d4;
+  background-color: #ffffff;
+  width: 100%;
+  height:auto ;
+  padding: 40px 40px;
+ }
+ .wrap{
+  display: inline-flex;
+  gap: 50px;
+  align-items: center;
+}
+.address1{
+  border: 2px solid #000000;
+  padding: 20px 40px;
+}
+.address-btn{
+  background-color: transparent;
+  color: #0056b3;
+  border: 0px;
+  padding: 20px;
+  font-weight: 600;
+  font-size: 15px;
+}
+.tab-btn{
+  color: #fff;
+  background-color: #F9AC25;
+  font-weight: 700;
+}
+.btn-add{
+  background-color: transparent;
+  border: 2px solid #F9AC25;
+  padding: 10px 25px;
+  border-radius: 10px;
+  color:#F9AC25;
+}
+.btn-add:active{
+  background-color: #F9AC25;
+  padding: 10px 25px;
+  border-radius: 10px;
+  color: #fff;
+}
+.tab-btn:hover{
+  background-color: transparent;
+  border: 3px solid #F9AC25;
+ 
+}
+.sidenav{
+  font-size: 20px !important;
+  line-height: 70px !important;
+}
+.profile-btn{
+  background-color: #f5743b;
+    padding: 15px 40px;
+    border: 0px;
+    font-size: 20px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+}
+.btn-1{
+  background-color:transparent;
+  border: none;
+  font-size:20px;
+  margin-top: 20px;
+  color: #f5743b;
+  font-weight: 500;
+  text-transform: capitalize;
+  cursor: pointer;
+
+}
+.btn-order{
+  background-color:transparent;
+  border: 2px solid #fff;
+  padding: 8px 20px;
+  width: 100%;
+  font-weight: 700;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  font-size: 20px;
+  border-radius: 5px;
+  color: #000000;
+  cursor: pointer
+}
+.btn-select{
+  background-color:transparent;border: 2px solid #f5743b; color: #f5743b;cursor: pointer; padding: 8px 20px;
+}
+.rate {
+  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 12px
+}
+.address-box{
+  border: 1px solid #a1a1a1;
+  padding: 20px 30px;
+ line-height:30px;
+  width: 90% ;
+  margin-top: 30px ;
+}
+.btn-select:active{
+  background-color: #f5743b;
+  color: #fff;
+}
+
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center
+}
+
+.rating>input {
+  display: none
+}
+
+.rating>label {
+  position: relative;
+  width: 1em;
+  font-size: 30px;
+  font-weight: 300;
+  color: #FFD600;
+  cursor: pointer
+}
+
+.rating>label::before {
+  content: "\2605";
+  position: absolute;
+  opacity: 0
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before {
+  opacity: 1 !important
+}
+
+.rating>input:checked~label:before {
+  opacity: 1
+}
+
+.rating:hover>input:checked~label:before {
+  opacity: 0.4
+}
+
+.buttons {
+  top: 36px;
+  position: relative
+}
+
+.rating-submit {
+  border-radius: 8px;
+  color: #fff;
+  height: auto
+}
+
+.rating-submit:hover {
+  color: #fff
+}
+#decrease{
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  background-color: #f4f2f2;
+  border-radius: 50%;
+}
+#increase{
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  background-color:#f4f2f2;
+  border-radius: 50%;
+}
+#count{
+  font-size: 20px;
+  width: 50px;
+  display: flex;
+  text-align: center;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f2f2;
+  border-radius: 20%;
+}
+.tab-con{
+  width: 90% !important;
+  margin: auto;
+}
+
+.card{
+  width:270px !important;
+  border: none ;
+}
+.card-title{
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  color: #000000;
+}
+.card-text{
+  color: #919191;
+  text-align: center;
+  font-size: 20px;
+}
+.star{
+  font-size: 15px;
+}
