--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,8 @@ ul li{
     touch-action: manipulation;
     vertical-align: baseline;
     width: auto;
+    margin-top: 10px;
+    height: 60px;
   }
   
   .button-5:hover,
@@ -68,4 +70,11 @@ ul li{
 
   .flex{
     display: flex;
+  }
+  .text-start{
+    text-align: start;
+  }
+  .aLink{
+    color: coral;
+    border-bottom: 1px solid coral;
   }
