--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Reddit+Sans+Condensed:wght@200..900&display=swap');
 
-body{
+body {
   font-family: "Reddit Sans Condensed", sans-serif;
-font-size: 1.2rem;
+  font-size: 1.2rem;
 }
+
 .reddit-sans-condensed {
   font-family: "Reddit Sans Condensed", sans-serif;
   font-optical-sizing: auto;
-  font-weight: var(--font-weight, 400); /* Default weight if not specified */
+  font-weight: var(--font-weight, 400);
+  /* Default weight if not specified */
   font-style: normal;
 }
+
 .navbar {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 20vh;
+  /* height: ; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -28,27 +31,32 @@ font-size: 1.2rem;
   border-bottom: 4px solid rgb(196, 192, 192);
   box-shadow: 0px 20px 15px -20px rgba(204, 179, 179, 0.4);
 }
-.navbar p{
+
+.navbar p {
   font-size: 1.2rem;
   text-align: center;
 }
-.navbar a{
+
+.navbar a {
   text-align: center;
   align-self: center;
 }
-.menuImage{
+
+.menuImage {
   width: 50px;
   height: 30px;
-  padding-right:15px;
+  padding-right: 15px;
 }
-.mobileView{
+
+.mobileView {
   font-size: 1.2rem;
   margin-top: -10px;
-  display:none;
+  display: none;
   overflow-y: scroll;
   zoom: 0.8;
 }
-.desktopView{
+
+.desktopView {
   display: block;
 }
 
@@ -64,7 +72,8 @@ font-size: 1.2rem;
   justify-content: center;
   width: 100%;
 }
-.top-heading p{
+
+.top-heading p {
   transform: scale(1.1, .9);
 
 }
@@ -99,6 +108,7 @@ font-size: 1.2rem;
   flex-direction: column;
   gap: 20px;
   margin-right: 2rem;
+  margin-top: 1rem;
   /* border: 1px solid red; */
   color: #2B2B2B;
 
@@ -136,17 +146,22 @@ font-size: 1.2rem;
   padding: 0px 12px;
 
 }
-.navbar-right .second a:hover, .navbar-right .second a:focus {
+
+.navbar-right .second a:hover,
+.navbar-right .second a:focus {
 
   border-bottom: 3px solid var(--themeColor);
 }
+
 .navbar-right .first a {
   font-size: 1.2rem;
   /* margin: 10px; */
 }
+
 .navbar-right .first p {
   margin-bottom: -2px;
 }
+
 .input-nav-search {
   width: 300px;
   border: 1px solid #2D2D2D;
@@ -271,9 +286,11 @@ font-size: 1.2rem;
 .little-league {
   position: relative;
 }
-.little-league h5{
+
+.little-league h5 {
   font-size: 2rem;
 }
+
 .overlay-3 {
   position: absolute;
   text-align: center;
@@ -296,7 +313,7 @@ font-size: 1.2rem;
   left: 30%;
   transform: translate(-50%, -50%);
   width: 50vw;
-  left:30%;
+  left: 30%;
   /* border: 2px solid yellow; */
   color: #fff;
   line-height: 10px;
@@ -469,20 +486,23 @@ font-size: 1.2rem;
 
   /* border: 1px solid red; */
 }
-.card .productsInfo{
+
+.card .productsInfo {
   padding: 1rem;
 }
-.card .new{
+
+.card .new {
   background-color: var(--themeColor);
   color: white;
   width: fit-content;
-  padding:0px 10px;
+  padding: 0px 10px;
   text-align: center;
   padding-top: 18px;
   line-height: 1px;
   margin: 0;
   text-transform: uppercase;
 }
+
 .price {
   color: #222;
   font-size: 1rem;
@@ -799,62 +819,14 @@ font-size: 1.2rem;
   margin: 5px;
   font-weight: 300;
 }
-.line{
+
+.line {
   background-color: black;
   height: 1px;
   width: 100%;
 }
 
-@media screen and (max-width:1280px) {
-  .footer-container {
-    justify-content: center;
-    align-items: center;
-  }
 
-  .footer-upward-left,
-  .footer-upward-right {
-    padding-left: 0px;
-    justify-content: center;
-    align-items: center;
-  }
-
-
-
-}
-
-@media screen and (max-width:538px) {
-  .input-boxes {
-    width: 40%;
-  }
-  .mobileView{
-    display:block;
-  border-radius: 1px solid red ;
-
-  }
-  .overlay-3{
-    width: 70vw;
-  }
-}
-
-/* --------login------ */
-
-.login-container {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 6rem;
-  padding: 4rem 1rem;
-  /* border: 1px solid red; */
-  /* height: 100vh; */
-}
-
-.login-container .login-left {
-  width: 40%;
-  height: auto;
-  border: 1px solid #dedede;
-  /* height: 50vh; */
-  /* display: flex; */
-
-}
 
 
 .login-container .login-right form {
@@ -1000,10 +972,39 @@ font-size: 1.2rem;
   /* border: 1px solid red; */
   width: 50%;
 }
+@media screen and (max-width:1280px) {
+  .footer-container {
+    justify-content: center;
+    align-items: center;
+  }
 
-@media screen and (max-width:768px) {
- 
+  .footer-upward-left,
+  .footer-upward-right {
+    padding-left: 0px;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
 }
+
+@media screen and (max-width:538px) {
+  .input-boxes {
+    width: 40%;
+  }
+
+  .mobileView {
+    display: block;
+    border-radius: 1px solid red;
+
+  }
+
+  .overlay-3 {
+    width: 70vw;
+  }
+}
+@media screen and (max-width:768px) {}
 
 /* --------addtocart------- */
 
@@ -1044,24 +1045,24 @@ font-size: 1.2rem;
   flex-wrap: wrap;
   height: 20vh;
   width: 100%;
-gap: 15px;
-margin-bottom: 100px !important;
+  gap: 15px;
+  margin-bottom: 100px !important;
   /* border: 1px solid red; */
 
 }
-.left-cart{
-  border: 1px solid rgb(209, 207, 207);
-padding: 3px;
+
+.left-cart {
+  border: 1px solid rgb(231, 231, 231);
+  padding: 3px;
+  border-radius: 10px;
 }
-.left-cart .product-info{
+
+
+.left-cart .product-info {
   width: 40%;
-  height: 33vh;
+  height: 20 vh;
 
 }
-
-
-
-
 
 
 .cart-container {
@@ -1107,11 +1108,9 @@ padding: 3px;
   width: 100%;
 }
 
-.left-cart .product-info{
+.left-cart .product-info {
   width: 900px;
-  padding: 5rem 0.6rem;
-  /* border: 1px solid #dedede; */
-  /* border: 1px solid blue; */
+  padding: 1.8rem 0.6rem;
   display: flex;
   gap: 20px;
   align-items: center;
@@ -1139,8 +1138,9 @@ padding: 3px;
   display: flex;
   justify-content: space-around;
   align-items: start;
-  gap: 10px;
+  gap: 5px;
   margin: 10px 0;
+  padding-right: 1rem;
   /* border: 1px solid blue; */
 }
 
@@ -1153,8 +1153,11 @@ padding: 3px;
 .right-cart {
   width: 470px;
   padding: 1rem;
-  margin-top: 30px;
-  /* border: 1px solid #ccc; */
+  padding-top: 2rem;
+  margin-top: 35px;
+  margin-left: 25px;
+  border: 1px solid #e9e6e6;
+  border-radius: 10px;
 }
 
 .right-cart input {
@@ -1165,15 +1168,17 @@ padding: 3px;
   border: none;
   border: 1px solid rgb(216, 214, 214);
 }
-.right-cart .input-button{
-  margin: 15px 0px;
+
+.right-cart .input-button {
+  margin: 1px 0px;
 }
 
 .pricing-details {
+  /* border: ; */
   display: flex;
   flex-direction: column;
-margin-left: 15px;
-  gap: 10px;
+  margin-left: 15px;
+  gap: 6px;
 }
 
 .pricing-row {
@@ -1360,29 +1365,31 @@ margin-left: 15px;
 }
 
 
-.react-multi-carousel-dot--active button, .react-multi-carousel-dot button  {
+.react-multi-carousel-dot--active button,
+.react-multi-carousel-dot button {
   width: 35px !important;
   height: 6px !important;
   border-radius: 25% !important;
 
 }
 
-.address-box{
+.address-box {
   border: 1px solid #a1a1a1;
   padding: 20px 20px;
- line-height:35px;
-  width: 90% ;
-  margin-top: 20px ;
+  line-height: 35px;
+  width: 90%;
+  margin-top: 20px;
 }
 
-.login-box{
+.login-box {
   border: 1px solid #d4d4d4;
   background-color: #ffffff;
   width: 100%;
-  height:auto ;
-  padding: 20px ;
- }
- .addressDetails .form-control{
+  height: auto;
+  padding: 20px;
+}
+
+.addressDetails .form-control {
   padding: 1rem;
   margin-bottom: 1.4rem;
   font-size: 20px;
@@ -1464,96 +1471,113 @@ margin-left: 15px;
     font-size: 0.9rem;
   }
 
-  .mobileView{
-    display:block;
-  border-radius: 1px solid red ;
+  .mobileView {
+    display: block;
+    border-radius: 1px solid red;
 
   }
-.mobileView p{
-  line-height: 5px;
-}
-.mobileView a{
-  margin-top: 25px !important;
-}
 
-.login-container {
+  .mobileView p {
+    line-height: 5px;
+  }
 
-  border: 1px solid red;
-  width: 100%;
-  margin-top: 15rem;
-  gap: 1rem;
-  padding: 0px;
-  flex-wrap: wrap;
-  height: auto;
-  /* border: 1px solid red; */
-  /* height: 100vh; */
-}
+  .mobileView a {
+    margin-top: 25px !important;
+  }
 
-.desktopView{
-  display: none;
-}
-.mobileView{
-border-radius: 1px solid red ;
-display:block;
-}
+  .login-container {
+
+    border: 1px solid red;
+    width: 100%;
+    margin-top: 15rem;
+    gap: 1rem;
+    padding: 0px;
+    flex-wrap: wrap;
+    height: auto;
+    /* border: 1px solid red; */
+    /* height: 100vh; */
+  }
+
+  .desktopView {
+    display: none;
+  }
+
+  .mobileView {
+    border-radius: 1px solid red;
+    display: block;
+  }
 
 
-.overlay-3{
-  width: 70vw;
-}
-.cart-container {
-  width: 100%;
-  padding: 5px;
-}
+  .overlay-3 {
+    width: 70vw;
+  }
 
-.left-cart .product-info{
-  width: 100%;
-  /* zoom: 0.7; */
+  .cart-container {
+    width: 100%;
+    padding: 5px;
+  }
 
-}
+  .left-cart .product-info {
+    width: 100%;
+    /* zoom: 0.7; */
 
-.right-cart {
-  width: 100%;
-  /* zoom: 0.8; */
-  border: 1px solid green;
+  }
 
-}
-.little-league {
+  .right-cart {
+    width: 100%;
+    /* zoom: 0.8; */
+    border: 1px solid green;
+
+  }
+
+  .little-league {
     height: 50vh;
-   
-}
-.overlay-4{
-  text-align: center;
-  width: 80%;
-  left: 45%;
-}
-.overlay-4 h5{
-  color: white;
-  margin-top: 2px;
-  font-size: 1.5rem;
-  font-weight:700;
-}
-.card{
-  max-width: 100%;
-}
-.little-league h5,  .overlay-4 h5{
-  color: white;
-  font-size: 1rem;
-}
-.little-league img{
-  height: 38vh;
-}
-.mobileView{
-border-radius: 1px solid red ;
-display:block;
-}
-.limitedAddition{
-  margin-top: 6rem;
-}
 
-.limitedAddition h1{
-  font-size: 2rem;
-}
+  }
 
+  .overlay-4 {
+    text-align: center;
+    width: 80%;
+    left: 45%;
+  }
+
+  .overlay-4 h5 {
+    color: white;
+    margin-top: 2px;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+
+  .card {
+    max-width: 100%;
+  }
+
+  .little-league h5,
+  .overlay-4 h5 {
+    color: white;
+    font-size: 1rem;
+  }
+
+  .little-league img {
+    height: 38vh;
+  }
+
+  .mobileView {
+    border-radius: 1px solid red;
+    display: block;
+  }
+
+  .limitedAddition {
+    margin-top: 6rem;
+  }
+
+  .limitedAddition h1 {
+    font-size: 2rem;
+  }
+
+  .top-heading{
+    justify-content: start;
+    padding-left: 3rem;
+  }
 
 }
