--- a/src/Components/styles/home.css
+++ b/src/Components/styles/home.css
@@ -1,3 +1,8 @@
+.home-container{
+    /* width: 140%; */
+}
+
+
 .offers-1{
     text-align: center;
 }
@@ -21,4 +26,139 @@
     font-weight:700;
     filter: brightness(100%);
     text-transform:uppercase;
+    /* white-space: nowrap; */
+
 }
+
+.banner-4, .banner-3{
+    position: relative;
+}
+.banner-4::before{
+    content: '';
+    top: 4.8rem;
+    left: 0;
+    width: 100%;
+    height: 76%;
+    position: absolute;
+    background-color: rgba(15, 15, 15, 0.5);
+    z-index: 1;
+}
+.overlay-4{
+    position: absolute;
+    color: white;
+    z-index: 2;
+}
+.shoptheGames{
+    left:5%;
+    top: 40%;
+}
+
+@media (max-width:917px){
+    
+    .overlay-4 h5, .overlay-3 h5, .overlay-2 h5, .overlay-1 h5{
+        margin-top: -12px;
+        font-size: 1.5rem;
+        /* font-weight:700;
+        filter: brightness(100%);
+        text-transform:uppercase; */
+    }
+    .banner-Crousal p, .banner-Crousal-2 p{
+        font-size: 1.2rem;
+        margin-bottom: 2rem;
+        line-height: 1.3rem;
+    }
+    .banner-Crousal h5{
+        font-size:1.8rem;
+      
+    }
+    .banner-Crousal{
+        left: 70%;
+        width: 50vw;
+        line-height: 2rem;
+    }
+    .carousel-image {
+        width: 100%;
+        height: 430px;
+     
+    }
+    
+    .crousal-container {
+        width: 100%;
+        height: 60vh;
+    }
+    .crousal-container img{
+        height: 15rem;
+    }
+    .limitedAddition{
+        margin: 1rem !important;
+    }
+    .special-offers .offers-1 {
+        height: 60vh;
+    }
+    .banner-3 .overlay-4{
+    left: 50%;
+    top: 40%;
+
+    }
+    .banner-4, .banner-3{
+        position: relative;
+    }
+    .banner-4::before{
+        content: '';
+        top: 5rem;
+        left: 0;
+        width: 100%;
+        height: 78%;
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+    .banner-3::before{
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 78%;
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+
+    .banner::before{
+        content: '';
+        top: 3.5rem;
+        left: 0;
+        width: 100%;
+        height: 78%;
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+    .overlay-4{
+        position: absolute;
+        color: white;
+        z-index: 2;
+    }
+    .banner-4 .overlay-4 {
+        top: 70%;
+        
+    }
+    .banner-4 .overlay-4 h5{
+        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+      font-size: 1.8rem;
+      
+    }
+    .banner-4 .overlay-4  p{
+        font-size: 1.4rem !important;
+        margin-bottom: 2rem;
+    }
+    .footer-upward-left{
+        width: 100%;
+    } 
+    .support{
+        width: 160px;
+    }
+    .banner-4 > h5{
+        color: rgb(59, 58, 58);
+    }
+    }
