--- a/src/Components/styles/checkout.css
+++ b/src/Components/styles/checkout.css
@@ -31,6 +31,7 @@
     
 }
 .your-order{
+        margin-top: 35px;
     border: 1px solid grey;
     box-shadow: 0 0 10px rgb(207, 207, 207);
     padding: 15px;
