--- a/src/Components/styles/profile.css
+++ b/src/Components/styles/profile.css
@@ -1,14 +1,75 @@
+
 .profile-sidebar {
     position: absolute;
     padding: 8px;
-    height: auto;
+    height: 100%;
+    margin-top: 0;
+  
     border-right: 1px solid rgb(177, 173, 173);
-    width: 20rem;
+    width: 18rem;
     box-shadow: inset 2px 2px 10px rgb(131, 128, 128), inset -1px -1px 5px rgba(167, 163, 163, 0.6);
+
+    top: 0;
+    left: 0;
+    height: 100vh; /* Full viewport height */
+  
+    background-color: #edeff1; /* Sidebar background color */
+    /* padding: 20px; */
+    overflow-y: auto; /* Scroll within the sidebar if content overflows */
+    overflow-x: hidden;
+}
+.profile-info{
+    margin-top: 12rem  !important;
 }
 
 .profile-container {
-    margin-left: 20rem;
+    margin-left: 18rem;
+    overflow-y: scroll;
+    height: 82vh;
+    overflow-x: hidden;
+    background-color: #eff3f7;
+    box-shadow:  2px 2px 10px rgb(131, 128, 128),  -1px -1px 5px rgba(167, 163, 163, 0.6);
+   
+  
+
+}
+
+.profile-sidebar::-webkit-scrollbar {
+    width: 3px; /* Set the width of the scrollbar */
+  }
+  
+  .profile-sidebar::-webkit-scrollbar-track {
+    background-color: #f8d4bc; /* Background of the scrollbar track */
+  }
+  
+  .profile-sidebar::-webkit-scrollbar-thumb {
+    background-color: #EA4824; /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Rounded corners */
+  }
+  
+  .profile-sidebar::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Darker color on hover */
+  }
+  
+.profile-container::-webkit-scrollbar {
+    width: 2px; /* Set the width of the scrollbar */
+  }
+  
+  .profile-container::-webkit-scrollbar-track {
+    background-color: #f1d2c3; /* Background of the scrollbar track */
+  }
+  
+  .profile-container::-webkit-scrollbar-thumb {
+    background-color: #df3f0e; /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Rounded corners */
+  }
+  
+  .profile-container::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Darker color on hover */
+  }
+.info-card{
+   
+width: 50%;
 }
 
 .profile-section p {
@@ -24,8 +85,6 @@
     margin-top: 1rem;
     padding: 30px;
     white-space: nowrap;
-    /* padding-left: 7vw;
-     */
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
     width: 102%;
@@ -43,7 +102,6 @@
     backface-visibility: hidden;
     padding: 2%;
     border-radius: 7px;
-    box-shadow: inset 2px 2px 10px rgb(131, 128, 128), inset -1px -1px 5px rgba(167, 163, 163, 0.6);
 }
 
 .password-info {
@@ -81,9 +139,11 @@
 }
 
 .logout-btn {
-    padding: 1.2rem 3.5rem;
+    padding: 1.2rem 3rem;
     background-color: var(--themeColor);
     color: white;
+    width: 60% !important;
+    align-items: center;
 }
 
 @media (max-width:817px) {
@@ -91,17 +151,20 @@
         display: flex;
         flex-direction: column;
     }
-
+.logout-btn{
+    width: 40%;
+}
     .profile-sidebar {
         position: absolute;
         border-right: 1px solid rgb(177, 173, 173);
         width: 98vw;
-        height: 37rem;
+        height: 60rem;
+        overflow: hidden;
     }
 
     .profile-container {
-        width: 100vw;
-        margin-top: 40rem;
+        width: 100%;
+        margin-top: 60rem;
         margin-left: 0rem;
     }
 }
