--- a/src/Components/styles/products.css
+++ b/src/Components/styles/products.css
@@ -1,7 +1,7 @@
 .product-display{
     margin: 35px;
     margin-top: 60px;
-    width:85%;
+    /* width:85%; */
     padding: 20px;
 }
 .productDetails{
