profile,login,signup

--- a/src/Components/styles/home.css
+++ b/src/Components/styles/home.css
@@ -84,7 +84,7 @@
     
     .crousal-container {
         width: 100%;
-        height: 60vh;
+        /* height: 60vh; */
     }
     .crousal-container img{
         /* height: 15rem; */
