--- a/src/App.css
+++ b/src/App.css
@@ -185,10 +185,10 @@ body {
 
 .crousal-container {
   width: 100%;
-  height: 105vh;
+  /* height: 105vh; */
   overflow: hidden;
   position: relative;
-  margin-top: 15rem;
+  /* margin-top: 15rem; */
 }
 
 .overlay-2 {
@@ -285,6 +285,7 @@ body {
 
 .little-league {
   position: relative;
+  margin-top: 5rem;
 }
 
 .little-league h5 {
@@ -355,7 +356,7 @@ body {
 
 .crousal-container {
   width: 100%;
-  height: 105vh;
+  /* height: 105vh; */
   overflow: hidden;
   position: relative;
 }
