--- a/src/App.css
+++ b/src/App.css
@@ -1044,6 +1044,7 @@ padding-top: 1rem;
   border: 1px solid rgb(231, 231, 231);
   padding: 3px;
   border-radius: 10px;
+  zoom: 0.9;
 }
 
 
@@ -1095,6 +1096,7 @@ padding-top: 1rem;
   gap: 1rem;
   height: auto;
   width: 100%;
+  zoom: .9;
 }
 
 .left-cart .product-info {
@@ -1147,6 +1149,7 @@ padding-top: 1rem;
   margin-left: 25px;
   border: 1px solid #e9e6e6;
   border-radius: 10px;
+  zoom: 0.9;
 }
 
 .right-cart input {
