--- a/src/Components/styles/payment.module.scss
+++ b/src/Components/styles/payment.module.scss
@@ -11,7 +11,8 @@ white-space: nowrap;
     border: 1px solid rgb(223, 223, 223) ;
     margin-top: 2rem;
     padding: 30px;
-    box-shadow: 10px 12px 10px #bebebe, -20px -20px 60px #ffffff;
+    background-color: white;
+    // box-shadow: 10px 12px 10px #bebebe, -20px -20px 60px #ffffff;
   }
   
   .bg {
@@ -50,6 +51,8 @@ white-space: nowrap;
     zoom: .9;
 }
 
+.address-shadow{
+}
 .form {
     width: 60vw;
     display: flex;
@@ -59,8 +62,9 @@ white-space: nowrap;
     padding: 30px 20px;
     position: relative;
     border-radius: 5px;
+    background-color: white !important;
     border: 1px solid rgb(233, 232, 232) ;
-    box-shadow: 0 2px 10px rgb(204, 203, 203);
+    // box-shadow: 0 2px 10px rgb(204, 203, 203);
   }
   .form .label {
     display: flex;
