--- a/src/Components/styles/AddressPanel.scss
+++ b/src/Components/styles/AddressPanel.scss
@@ -21,20 +21,20 @@
   .address-btn{
     background-color: white;
     color: #0056b3;
-background: linear-gradient(to top, black, white);
+// background: linear-gradient(to top, black, white);
 
     border: 0px;
     padding: 20px;
     font-weight: 600;
     font-size: 15px;
   }
-  .addresses {
-    background-image: url('../../assets/crousal-1.jpg'); /* Replace with your image URL */
-    background-size: cover; /* Ensures the image covers the entire background */
-    background-position: center; /* Centers the image */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
-    // height: 100vh; /* Set height if necessary (optional) */
-  }
+  // .addresses {
+  //   background-image: url('../../assets/crousal-1.jpg'); /* Replace with your image URL */
+  //   background-size: cover; /* Ensures the image covers the entire background */
+  //   background-position: center; /* Centers the image */
+  //   background-repeat: no-repeat; /* Prevents the image from repeating */
+  //   // height: 100vh; /* Set height if necessary (optional) */
+  // }
 .addresses h3{
     text-transform: uppercase;
 }
@@ -57,11 +57,11 @@ margin-top: 4rem;
 
 .address-shadow{
     border: 2px solid #f1dc8f ;
-    // background-color: #faf6e9;
+    // background-color: #e6e5e4;
     width: fit-content;
     zoom: .9;
-    background-color: white;
-    // box-shadow: 0 5px 10px 2px rgb(218, 218, 218);
+    background-color: rgb(247, 241, 241);
+    box-shadow: 0 8px 10px 2px rgb(165, 164, 164);
 }
 
 @media (max-width:1200px){
