--- a/src/Components/styles/Profile.scss
+++ b/src/Components/styles/Profile.scss
@@ -25,11 +25,11 @@ margin-top: -2.8rem;
     padding-left: 0rem;
 }
 .profile-grid{
-    border: 2px solid #f8d0b9 ;
+    border: 2px solid #fceee6 ;
     box-shadow: 0 8px 10px 2px rgb(199, 195, 195);
-    background: linear-gradient(to bottom, rgb(0, 0, 0), white);
+    // background: linear-gradient(to bottom, rgb(0, 0, 0), white);
     margin-left: 20vw;
-    color: white;
+    // color: white;
     padding: 10px;
     border-radius: 10px;
     align-content: center;
