--- a/src/Components/styles/payment.module.scss
+++ b/src/Components/styles/payment.module.scss
@@ -12,7 +12,7 @@ white-space: nowrap;
     margin-top: 2rem;
     padding: 30px;
     background-color: white;
-    // box-shadow: 10px 12px 10px #bebebe, -20px -20px 60px #ffffff;
+    box-shadow: 3px 5px 10px 5PX #bebebe, -20px -20px 60px #ffffff;
   }
   
   .bg {
